--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  padding-top: 40px;
+  padding-top: 20px;
 }
 
 form {
@@ -7,6 +7,7 @@ form {
   padding: 20px 30px;
   border-radius: 5px;
   border: 1px solid #D4D4C9;
+  margin-top: 6px;
 }
 
 table {
@@ -16,6 +17,12 @@ table {
 .flex-container {
   display: flex;
   justify-content: center;
+
+}
+
+.btn-align {
+
+  text-align: right;
 
 }
 
