--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,12 @@ table {
 .btn2 {
   width: 140px; 
 }
+
+.button-transparent {
+  background-color: Transparent;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  overflow: hidden;
+  outline: none;
+}
