--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,10 @@ table {
 
 }
 
+.btn-align-center {
+  text-align: center;
+}
+
 .item {
   margin-left: 2px;
   margin-right: 2px;
@@ -34,5 +38,9 @@ table {
 
 .btn2 {
   width: 140px; 
+}
+
+input {
+  width: 100%;
 }
 
